# hisi-rf

./: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/fixtures/ws63-consumer/: Cargo.toml  rust-toolchain.toml
.github/fixtures/ws63-consumer/.cargo/: config.toml
.github/fixtures/ws63-consumer/src/: main.rs
.github/scripts/: check-boundaries.py  check-portable-consumer.py
.github/workflows/: ci.yml  publish.yml
examples/: ws63_plain_firmware.rs  ws63_resource_report.rs
src/: lib.rs  state.rs  wifi.rs
src/wifi/: security.rs
