[package]
name = "hisi-rf"
version = "0.1.0-alpha.2"
edition = "2024"
rust-version = "1.85"
authors = ["sanchuanhehe"]
license = "MIT"
description = "Chip-selecting radio facade for HiSilicon embedded Rust"
repository = "https://github.com/hispark-rs/hisi-rf"
keywords = ["embedded", "no-std", "wifi", "radio", "hisilicon"]
categories = ["embedded", "no-std", "network-programming"]

[dependencies]
hisi-rf-core = "0.1.0-alpha.1"

[features]
default = []
smoltcp = ["hisi-rf-core/smoltcp"]

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
undocumented_unsafe_blocks = "deny"
