[package]
name = "hisi-rf"
version = "0.1.0-alpha.23"
edition = "2024"
rust-version = "1.91"
authors = ["sanchuanhehe"]
license = "MIT"
description = "Chip-selecting radio facade for HiSilicon embedded Rust"
repository = "https://github.com/hispark-rs/hisi-rf"
keywords = ["embedded", "no-std", "wifi", "radio", "hisilicon"]
categories = ["embedded", "no-std", "network-programming"]

[dependencies]
hisi-rf-core = "=0.1.0-alpha.11"
hisi-rf-ws63 = { version = "=0.1.0-alpha.14", optional = true, default-features = false }

[target.'cfg(target_arch = "riscv32")'.dev-dependencies]
hisi-hal = { version = "0.7.0-alpha.3", features = ["chip-ws63", "unstable"] }
hisi-riscv-rt = { version = "0.5.5", default-features = false, features = [
    "chip-ws63",
    "bundled-memory-x",
    "boot-header",
    "ws63-bgle-32k",
] }

[features]
default = []
chip-ws63 = ["dep:hisi-rf-ws63"]
incremental-backend-experiment = ["hisi-rf-core/incremental-backend-experiment"]
wifi = ["hisi-rf-ws63?/wifi"]
smoltcp = ["hisi-rf-core/smoltcp", "hisi-rf-ws63?/smoltcp"]
wpa2-personal = ["wifi", "hisi-rf-ws63?/wpa2-personal"]
wpa3-personal = ["wifi", "hisi-rf-ws63?/wpa3-personal"]
# Application profiles select a complete, tested protocol + security + L2
# composition. The chip remains explicit so one profile never guesses hardware.
profile-wifi-wpa2-smoltcp = ["wifi", "smoltcp", "wpa2-personal"]
profile-wifi-wpa3-smoltcp = ["wifi", "smoltcp", "wpa3-personal"]

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
undocumented_unsafe_blocks = "deny"
